Quorum3/Library/Tests/Templating/Pass/ReturnNullWithTemplatedReturnType_9.quorum
class Main
    action Main
        doSomething()
        output "passed"
    end

    action doSomething returns Node<integer>
        return undefined
    end
end
