Quorum3/Library/Tests/Templating/Fail/PassIntegerTakesBoolean_4.quorum
class main
    action Main
        Test<boolean> something
        something:doSomething(5)
    end
end